src/test/resources/entity_test/invalid/Employee8.entity
Employee8 {

 id:integer { @Id, @NotNull };
 
 name : string ;
 
 name : string ; // duplicated field
 name : long ;
 name : long ;
 
 foo : xxx ;
 
 comment : string { @Xxxx, @Max(aaa)};
} 